--- a/styles/styles.css
+++ b/styles/styles.css
@@ -579,7 +579,7 @@ section h4 {
 
 .section-title {
   color: #3e3e3e;
-  font-size: 26px;
+  font-size: 3em;
   font-weight: 700;
   margin: 40px 0;
   letter-spacing: 2px;
@@ -693,7 +693,7 @@ section h4 {
 .accordionClose {
   border-radius: 30px;
   margin: 15px;
-  background-color: #eee;
+  background-color: #fff;
   color: #444;
   cursor: pointer;
   padding: 5px;
@@ -760,9 +760,9 @@ section h4 {
 #about {
   margin: 25px auto;
   width: 50%;
-  padding: 0 18px;
+  padding: 10px 18px;
   display: none;
-  background-color: white;
+  background-color: #ecf0f1;
   overflow: hidden;
 }
 
