table header to grey

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -858,6 +858,6 @@ section h4 {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4A9FF9;
+    background-color: #a3a3a3;
     color: white;
 }
