less painful way of referencing images

--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -107,7 +107,7 @@
 
         <div class="details-content">
           {{#if img}}
-            <img src="{{ROOTURL}}{{img}}">
+            <img src="{{ROOTURL}}{{guideImageLocation}}{{img}}">
           {{/if}}
           {{{ content }}}
         </div>
