image rendering and no duplicate categories, hidden ad

--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -68,7 +68,7 @@
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
             {{#each categories}}
-              <option value="{{category}}">{{category}}</option>
+              <option value="{{this}}">{{this}}</option>
             {{/each}}
           </select>
         </div>
