--- a/styles/styles.css
+++ b/styles/styles.css
@@ -782,7 +782,7 @@ section h4 {
 #ad-wrapper {
   margin-top: 25px;
   position: relative;
-  display: inline-block;
+  display:none; /*  display: inline-block;TODO: when we have an ad, put here*/ 
   width: 320px;
   /* mobile banner, adsense https://support.google.com/adsense/answer/9739?hl=en */
   height: 50px;
