--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -81,7 +81,8 @@
           <div style="{{#if img}}background-image: url('{{ROOTURL}}{{guideImageLocation}}{{img}}');{{/if}}" class="item h2 w4" data-id="{{ id }}" data-category="{{category}}" data-description="{{ description }}" data-title="{{ title }}">
             <a href="{{ url }}"> <div class="item-content">
               <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">{{ category }}</div>
+                <div class="card-id">{{ category }}</div>
+                <div class="card-author">{{ author }}</div>
                 <div class="card-title">{{ title }}</div>
                 <div class="card-description">{{ description }}</div>
                 </div>
