--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,16 +197,31 @@
 }
 
 .card-id {
-/*  display: none;*/
+  color:#3d3d3d;
+  margin-left:10px;float:left;
   font-size:.8em;
-  position: absolute;
+
   left: 7px;
   top: 0;
   height: 30px;
   line-height: 30px;
   text-align: left;
   font-size: 12px;
-  font-weight: 400;
+  font-weight: 600;
+}
+.card-author {
+  color:#3d3d3d;
+  margin-right:10px;
+  float:right;
+  font-size:.8em;
+
+  left: 7px;
+  top: 0;
+  height: 30px;
+  line-height: 30px;
+  text-align: right;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 /* Grid Footer */
