--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@
   font-weight: 500;
   word-wrap: break-word;
   background-color: rgba(255, 255, 255, 0.6);
-  border: 3px solid #7f8fa6;
+  /*border: 3px solid #7f8fa6;*/
   color: #000;
   border-radius: 1px;
   -webkit-transition: all 0.2s ease-out;
