--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -22,6 +22,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus</title>
+  <meta name=”description” content="Curated Offroad Subaru Build Guides.">
 
 </head>
 
