new time stamp for version

--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -23,7 +23,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lifted Subarus</title>
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
-
+  <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
 </head>
 
 <body>
