--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -24,6 +24,11 @@
   <title>Lifted Subarus</title>
   <meta name=”description” content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
+  <!--  Facebook -->
+  <meta property="og:title"        content="{{#if home}}Lifted Subarus{{/if}} {{#if detailpage}} {{ title }} {{/if}}" />
+  <meta property="og:description"  content="{{#if home}}Curated Offroad Subaru Build Guides.{{/if}} {{#if detailpage}} {{ description }} {{/if}}" />
+
+
 </head>
 
 <body>
