theres no fix for stupid, but at least you can iterate on it

--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -30,7 +30,7 @@
 
   {{#if detailpage}}
     {{#if img}}
-    <meta property="og:image" content="{{img}}" />
+    <meta property="og:image" content="{{guideImageLocation}}{{img}}" />
     {{/if}}
   {{/if}}
 
