--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -53,7 +53,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" src="./static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
