--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -93,7 +93,7 @@
           <div style="{{#if img}}background-image: url('{{ROOTURL}}{{guideImageLocation}}{{img}}');{{/if}}" class="item h2 w4" data-id="{{ id }}" data-category="{{category}}" data-description="{{ description }}" data-title="{{ title }}">
 
               <div class="card">
-                <div class="card-id">{{ category }}</div>
+                <!--<div class="card-id">{{ category }}</div> -->
                 <a href="{{ url }}"> <div class="item-content">
                 <div class="card-title">{{ title }}</div>
                 <div class="card-description">{{ description }}</div>
