--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -21,8 +21,8 @@
   <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lifted Subarus</title>
-  <meta name=”description” content="Curated Offroad Subaru Build Guides.">
+  <title>Lifted Subarus- Curated Offroad Subaru Build Guides & Resources</title>
+  <meta name=:description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
   <meta property="og:title" content="{{#if home}}Lifted Subarus{{/if}} {{#if detailpage}} {{ title }} {{/if}}" />
@@ -53,7 +53,7 @@
     <p>Stay Muddy Friends,</p>
     <p>-Doug</p>
 
-    <img style="margin:0 auto;display:block; width:75%;" src="/static/img/site/elChubra-min.jpg"/>
+    <img style="margin:0 auto;display:block; width:75%;" alt="lifted subaru" src="/static/img/site/elChubra-min.jpg"/>
 
     <br>
     <button class="accordionClose accordion-action">X</button>
