--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -90,7 +90,7 @@
         <!-- Tiles! -->
         {{#each detailPageConfigs}}
 
-          <div style="{{#if img}}background-image: url('{{ROOTURL}}{{guideImageLocation}}{{img}}');{{/if}}" class="item h2 w4" data-id="{{ id }}" data-category="{{category}}" data-description="{{ description }}" data-title="{{ title }}">
+          <div style="{{#if img}}background-image: url('{{ROOTURL}}{{guideImageLocation}}{{img}}');{{/if}}" class="item h2 w4" data-category="{{category}}" data-description="{{ description }}" data-title="{{ title }}">
 
               <div class="card">
                 <!--<div class="card-id">{{ category }}</div> -->
