--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -170,7 +170,7 @@
   {{/if}}
 
   <footer>
-    <a href="mailto:dwbrown89@gmail.com">Submit Writeup</a>
+    <a href="mailto:dwbrown89@gmail.com">Contact</a>
     <p style="margin-top:25px;">Found this website helpful?<br><a href="https://www.paypal.me/devgorilla/1" ><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120" height="20"><linearGradient id="b" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><clipPath id="a"><rect width="120" height="20" rx="3" fill="#fff"/></clipPath><g clip-path="url(#a)"><path fill="#555" d="M0 0h21v20H0z"/><path fill="#007ec6" d="M21 0h99v20H21z"/><path fill="url(#b)" d="M0 0h120v20H0z"/></g><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="110"><text x="115" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="110">☕</text><text x="115" y="140" transform="scale(.1)" textLength="110">☕</text><text x="695" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="890">Donate a buck</text><text x="695" y="140" transform="scale(.1)" textLength="890">Donate a buck</text></g> </svg></a></p>
     <div id="ad-wrapper"> 320x50</div>
     <div class="disclaimer" >
