--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -185,7 +185,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="{{ROOTURL}}/scripts/script-min.js"></script>
+  <script src="{{ROOTURL}}/scripts/script.js"></script>
   <script src="{{ROOTURL}}/scripts/accordion-min.js"></script>
 
 </body>
