adds google search verification meta

--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -27,7 +27,7 @@
   <!--  Facebook -->
   <meta property="og:title" content="{{#if home}}Lifted Subarus{{/if}} {{#if detailpage}} {{ title }} {{/if}}" />
   <meta property="og:description" content="{{#if home}}Curated Offroad Subaru Build Guides.{{/if}} {{#if detailpage}} {{ description }} {{/if}}" />
-
+  <meta name="google-site-verification" content="cAoAzBKndIH-Pn4IS2m2kYgLKt-jQEGGcPpMaHA6sjw" />
   {{#if detailpage}}
     {{#if img}}
     <meta property="og:image" content="{{guideImageLocation}}{{img}}" />
