forester spring comparison ++ change from ‘pdf archive’ to just archive. More general name makes sense now that not all archives are pdfs but images also.

--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -121,7 +121,7 @@
           <a href="{{ original_url }}" class="btn grey-background">Link</a>
         {{/if}}
         {{#if archive_url}}
-          <a href="{{ROOTURL}}{{ archive_url }}" class="btn grey-background">PDF Archive</a>
+          <a href="{{ROOTURL}}{{ archive_url }}" class="btn grey-background">Archive</a>
         {{/if}}
 
         <div class="details-content">
