--- a/renderer/template.hbs
+++ b/renderer/template.hbs
@@ -112,18 +112,20 @@
   {{#if detailpage}}
     <section class="details">
         <h1 class="details-headline">{{ title }}</h1>
-        {{#if author}} <p class="details-author">by   {{#if author_link}}<a href="{{author_link}}">{{/if}}
-          {{ author }}
-          {{#if author_link}}</a>{{/if}}
+        <h3 class="details-category"> — {{ category }}</h3>
+        <div class="details-buttons">
+          {{#if author}} <p class="details-author">by   {{#if author_link}}<a href="{{author_link}}">{{/if}}
+            {{ author }}
+            {{#if author_link}}</a>{{/if}}
 
-          </p>{{/if}}
-        {{#if original_url}}
-          <a href="{{ original_url }}" class="btn grey-background">Link</a>
-        {{/if}}
-        {{#if archive_url}}
-          <a href="{{ROOTURL}}{{ archive_url }}" class="btn grey-background">Archive</a>
-        {{/if}}
-
+            </p>{{/if}}
+          {{#if original_url}}
+            <a href="{{ original_url }}" class="btn grey-background">Link</a>
+          {{/if}}
+          {{#if archive_url}}
+            <a href="{{ROOTURL}}{{ archive_url }}" class="btn grey-background">Archive</a>
+          {{/if}}
+        </div>
         <div class="details-content">
           {{#if img}}
             <img {{#if youtube}}style="display:none" {{/if}} src="{{{ROOTURL}}}{{{guideImageLocation}}}{{{img}}}">
