--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,6 +116,12 @@
   max-width:50%;
 }
 
+@media only screen and (max-width: 800px) {
+  .details-content img{
+    max-width:100%;
+  }
+}
+
 .details-content iframe{
   margin:10px auto;
   display:block;
